# detect-image-data

./: Cargo.toml  readme.md
detect-image-core/: Cargo.toml
detect-image-core/src/: lib.rs
detect-image-php/: Cargo.toml  readme.md
detect-image-php/examples/php_so/: doc.php  test.php
detect-image-php/src/: lib.rs
detect-image-php/src/php_class/: macros.rs  mod.rs  result.rs  rqrr.rs  scanner.rs
detect-image-zbar/: Cargo.toml  readme.md
detect-image-zbar/src/: c_lib.rs  lib.rs
detect-image-zxing/: Cargo.toml  build.rs  readme.md
detect-image-zxing/c_src/: CMakeLists.txt  dome.cpp  reader.cpp  reader.h
detect-image-zxing/src/: c_lib.rs  lib.rs
examples/zbar/: Cargo.toml
examples/zbar/src/: main.rs
examples/zxing/: Cargo.toml
examples/zxing/src/: main.rs
src/: lib.rs
